@@ -4,10 +4,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
+import java.util.concurrent.*;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -24,6 +21,9 @@ import com.openclassrooms.tourguide.user.UserReward;
 import org.junit.jupiter.api.AfterEach;
 
 import static org.junit.jupiter.api.Assertions.*;
+
+import org.awaitility.Awaitility;
+import java.time.Duration;
 
 public class TestRewardsService {
 
@@ -52,20 +52,28 @@ public class TestRewardsService {
 	}
 
 	@Test
-	public void userGetRewards() throws InterruptedException {
+	void userGetRewards() {
 		User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
 		Attraction attraction = gpsUtil.getAttractions().getFirst();
 		user.addToVisitedLocations(new VisitedLocation(user.getUserId(), attraction, new Date()));
 
 		tourGuideService.trackUserLocation(user);
-		Thread.sleep(1000); // Attendre le calcul asynchrone
+
+		long timeout = 2000; // 2 secondes max
+		long start = System.currentTimeMillis();
+
+		while (user.getUserRewards().isEmpty()) {
+			if (System.currentTimeMillis() - start > timeout) {
+				fail("Timeout: no reward calculated within 2 seconds");
+			}
+		}
 
 		List<UserReward> userRewards = user.getUserRewards();
 		assertEquals(1, userRewards.size());
 	}
 
 	@Test
-	public void isWithinAttractionProximity() {
+	void isWithinAttractionProximity() {
 		Attraction attraction = gpsUtil.getAttractions().getFirst();
 		assertTrue(rewardsService.isWithinAttractionProximity(attraction, attraction));
 	}
@@ -73,61 +81,59 @@ public class TestRewardsService {
 	@Test
 	void nearAllAttractions() {
 		rewardsService.setProximityBuffer(Integer.MAX_VALUE);
-
 		InternalTestHelper.setInternalUserNumber(1);
 		TourGuideService localTourGuideService = new TourGuideService(gpsUtil, rewardsService);
 
 		User user = localTourGuideService.getAllUsers().getFirst();
 		rewardsService.calculateRewards(user);
 
-		// Attendre que les récompenses soient calculées
-		long timeout = 2000;
-		long pollInterval = 50;
-		long start = System.currentTimeMillis();
-
-		while (user.getUserRewards().isEmpty()) {
-			if (System.currentTimeMillis() - start > timeout) {
-				fail("Timeout après " + timeout + "ms : aucune récompense calculée");
-			}
-			try {
-				Thread.sleep(pollInterval);
-			} catch (InterruptedException e) {
-				Thread.currentThread().interrupt();
-				fail("Test interrompu");
-			}
-		}
+		Awaitility.await()
+				.atMost(Duration.ofSeconds(2))
+				.pollInterval(Duration.ofMillis(50))
+				.until(() -> !user.getUserRewards().isEmpty());
 
 		List<UserReward> userRewards = user.getUserRewards();
-        assertFalse(userRewards.isEmpty(), "L'utilisateur devrait avoir des récompenses");
-		LOGGER.info("Nombre de récompenses trouvées: {}", userRewards.size());
+		assertFalse(userRewards.isEmpty(), "The user should have rewards");
+		LOGGER.info("Number of rewards found: {}", userRewards.size());
 
 		localTourGuideService.shutdown();
 	}
 
+	// NEW TESTS TO IMPROVE COVERAGE RECOMMENDED
+
 	@Test
-	public void shutdownMultipleTimes() {
+	void highVolumeGetRewards() {
+		LOGGER.info("======> Start highVolumeGetRewards with 100 users <=======");
+		InternalTestHelper.setInternalUserNumber(100);
+		TourGuideService localTourGuideService = new TourGuideService(gpsUtil, rewardsService);
+		List<User> users = localTourGuideService.getAllUsers();
+		assertEquals(100, users.size(), "The number of users created must match");
+	}
+
+	@Test
+	void shutdownMultipleTimes() {
 		RewardsService testService = new RewardsService(gpsUtil, new RewardCentral());
 
 		// Premier shutdown
 		assertDoesNotThrow(testService::shutdown);
 
-		// Deuxième shutdown (doit être idempotent)
+		// Second shutdown
 		assertDoesNotThrow(testService::shutdown);
 	}
 
 	@Test
-	public void concurrentRewardCalculation() throws ExecutionException, InterruptedException, TimeoutException {
+	void concurrentRewardCalculation() throws ExecutionException, InterruptedException, TimeoutException {
 		List<User> users = new ArrayList<>();
-		Attraction attraction = gpsUtil.getAttractions().get(0);
+		Attraction attraction = gpsUtil.getAttractions().getFirst();
 
-		// Créer plusieurs utilisateurs avec des locations près de la même attraction
+		// Create multiple users with locations near the same attraction
 		for (int i = 0; i < 5; i++) {
 			User user = new User(UUID.randomUUID(), "concurrentUser" + i, "000", "concurrent" + i + "@test.com");
 			user.addToVisitedLocations(new VisitedLocation(user.getUserId(), attraction, new Date()));
 			users.add(user);
 		}
 
-		// Calculer les récompenses en parallèle
+		// Calculate rewards in parallel
 		List<CompletableFuture<Void>> futures = users.stream()
 				.map(rewardsService::calculateRewardsAsync)
 				.toList();
@@ -138,9 +144,9 @@ public class TestRewardsService {
 
 		allFutures.get(10, TimeUnit.SECONDS);
 
-		// Vérifier que tous les utilisateurs ont des récompenses
+		// Check that all users have rewards
 		for (User user : users) {
-            assertFalse(user.getUserRewards().isEmpty(), "L'utilisateur " + user.getUserName() + " devrait avoir des récompenses");
+            assertFalse(user.getUserRewards().isEmpty(), "The user" + user.getUserName() + " should have rewards");
 		}
 	}
 
